Replace hardcoded background to fix dark mode
* Use @background-color-neutral instead of a hardcoded background color
  so that themes with dark mode toggles are able to theme the survey
  correctly.

Bug: T366626

--- a/resources/ext.quicksurveys.lib/styles.less
+++ b/resources/ext.quicksurveys.lib/styles.less
@@ -12,7 +12,7 @@
 .ext-quick-survey-panel,
 .ext-qs-loader-bar {
 	width: auto;
-	background-color: #eaecf0;
+	background-color: @background-color-neutral;
 }
 
 /* FIXME: Should be an ajax loader to give impression something is happening */
@@ -21,7 +21,7 @@
 	margin-left: 1.4em;
 	clear: right;
 	float: right;
-	background-color: #eaecf0;
+	background-color: @background-color-neutral;
 	display: flex;
 	justify-content: center;
 	align-items: center;
